merged CustomUserDetails into User and refactored other code to match